network-security-groups/rg-prd-nsg-hub-1/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
  },
  "variables": {
    "existingVirtualNetworkResourceGroupName": "rg-vn-prd-hub-1",
    "newNetworkSecurityGroupResourceGroupName": "rg-nsg-vn-prd-hub-1",
    "existingVirtualNetworkName": "vn-prd-hub-1",
    "location": "[resourceGroup().location]",
    "existingManagementSubnetName": "prd-vn-hub-1-management-1",
    "existingUntrustedSubnetName": "prd-vn-hub-1-untrusted-1",
    "existingTrustedSubnetName": "prd-vn-hub-1-trusted-1",
    "existingSharedSubnetName": "prd-vn-hub-1-shared-1",
    "newManagementNsgName": "[concat(variables('existingManagementSubnetName'), '-nsg')]",
    "newUntrustedNsgName": "[concat(variables('existingUntrustedSubnetName'), '-nsg')]",
    "newTrustedNsgName": "[concat(variables('existingTrustedSubnetName'), '-nsg')]",
    "newSharedNsgName": "[concat(variables('existingSharedSubnetName'), '-nsg')]",
    "managementSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingManagementSubnetName'))]",
    "untrustedSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingUntrustedSubnetName'))]",
    "trustedSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingTrustedSubnetName'))]",
    "sharedSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingSharedSubnetName'))]",

    "prdHub1GatewaySubnetAddressPrefix": "172.18.0.0/24",
    "prdHub1ManagementSubnetAddressPrefix": "172.18.1.0/24",
    "prdHub1UntrustedSubnetAddressPrefix": "172.18.2.0/24",
    "prdHub1TrustedSubnetAddressPrefix": "172.18.3.0/24",
    "prdHub1SharedSubnetAddressPrefix": "172.18.4.0/24",

    "prdApps1AppGwSubnetAddressPrefix": "172.19.1.0/24",
    "prdApps1DmzSubnetAddressPrefix": "172.19.2.0/24",
    "prdApps1FrontendSubnetAddressPrefix": "172.19.3.0/24",
    "prdApps1BackendSubnetAddressPrefix": "172.19.4.0/24",

    "preApps1AppGwSubnetAddressPrefix": "172.20.1.0/24",
    "preApps1DmzSubnetAddressPrefix": "172.20.2.0/24",
    "preApps1FrontendSubnetAddressPrefix": "172.20.3.0/24",
    "preApps1BackendSubnetAddressPrefix": "172.20.4.0/24",

    "prdHub1ManagementAddresses": [ "172.18.1.4" ]

  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newManagementNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdHub1UntrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-untrusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1UntrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1TrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-trusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1TrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1SharedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-shared-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1SharedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1AppGwSubnet",
            "properties": {
              "description": "Deny prd-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }


        ]
      }
    },

    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newUntrustedNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1TrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-trusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1TrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1SharedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-shared-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1SharedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1AppGwSubnet",
            "properties": {
              "description": "Deny prd-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },


    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newTrustedNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1UntrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-untrusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1UntrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1SharedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-shared-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1SharedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1AppGwSubnet",
            "properties": {
              "description": "Deny prd-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }

        ]
      }
    },


    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newSharedNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowDomainControllersPortsTCP",
            "properties": {
              "description": "Allow domain controllers ports TCP",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "25",
                "42",
                "135",
                "137",
                "139",
                "389",
                "636",
                "3268-3269",
                "88",
                "53",
                "445",
                "464",
                "9389",
                "5722",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationPortRange": ""
            }
          },
          {
            "name": "AllowDomainControllersPortsUDP",
            "properties": {
              "description": "Allow domain controllers ports UDP",
              "protocol": "UDP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "389",
                "88",
                "53",
                "445",
                "464",
                "123",
                "137-138",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationPortRange": ""
            }
          },

          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1UntrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-untrusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1UntrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPrdHub1TrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-trusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1TrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1AppGwSubnet",
            "properties": {
              "description": "Deny prd-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }

        ]
      }
    }
  ],
  "outputs": {
  }
}
